--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>等待那个LT时刻</title>
     <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
-    <div>
+    <div class="container">
         <canvas id="canvas"></canvas>
-        <h2>hello the world!</h2>
+        <div class="time" id="time">
+            <span class="hour">199</span>时
+            <span class="min">45</span>分
+            <span class="sec">23</span>秒
+        </div>
+        <div id="content" class="content">
+            <div class="lt">丽  婷</div>
+            <div class="birth">生日快乐</div>
+        </div>
+
     </div>
 
 </body>
 <script src="./index.js"></script>
+
 </html>
