完成倒计时，展示祝福语

--- a/index.html
+++ b/index.html
@@ -12,13 +12,21 @@
     <div class="container">
         <canvas id="canvas"></canvas>
         <div class="time" id="time">
-            <span class="hour">199</span>时
-            <span class="min">45</span>分
-            <span class="sec">23</span>秒
+            24时00分00秒
         </div>
         <div id="content" class="content">
             <div class="lt">丽  婷</div>
             <div class="birth">生日快乐</div>
+        </div>
+
+        <div id="chat-text" class="top-title">
+            感谢你看到了我，容我进行自我介绍。
+            我是一个由基本代码组成的程序。
+            也许现在你看到的信息并不多，但正在持续运行...
+
+            或许现在还不是最佳时刻，
+            当你在某个特殊的时刻想起了我，
+            请再次打开！
         </div>
 
     </div>
