--- a/index.html
+++ b/index.html
@@ -2,34 +2,34 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>等待那个LT时刻</title>
-    <link rel="stylesheet" href="./index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>等待那个LT时刻</title>
+  <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
-    <div class="container">
-        <canvas id="canvas"></canvas>
-        <div class="time" id="time">
-            24时00分00秒
-        </div>
-        <div id="content" class="content">
-            <div class="lt">丽  婷</div>
-            <div class="birth">生日快乐</div>
-        </div>
-
-        <div id="chat-text" class="top-title">
-            感谢你看到了我，容我进行自我介绍。
-            我是一个由基本代码组成的程序。
-            也许现在你看到的信息并不多，但正在持续运行...
-
-            或许现在还不是最佳时刻，
-            当你在某个特殊的时刻想起了我，
-            请再次打开！
-        </div>
-
+  <div class="container">
+    <canvas id="canvas"></canvas>
+    <div class="time" id="time">
+      00时00分00秒
     </div>
+    <div id="content" class="content">
+      <div class="lt">丽 婷</div>
+      <div class="birth">生日快乐</div>
+    </div>
+
+    <div id="chat-text" class="top-title">
+      感谢你看到了我
+      我是一个基本代码程序
+      正在持续运行...
+
+      或许现在还不是最佳时刻
+      当你在某个时刻想起了我
+      请再次打开！
+    </div>
+
+  </div>
 
 </body>
 <script src="./index.js"></script>
