--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@
       00时00分00秒
     </div>
     <div id="content" class="content">
-      <div class="lt">丽 婷</div>
+      <div class="lt">Wait...</div>
+      <!-- <div class="lt">丽 婷</div> -->
       <div class="birth">生日快乐</div>
     </div>
 
     <div id="chat-text" class="top-title">
-      感谢你看到了我
-      我是一个基本代码程序
-      正在持续运行...
-
-      或许现在还不是最佳时刻
-      当你在某个时刻想起了我
-      请再次打开！
+      <div>感谢你偶尔来看我</div>
+      <div>我是一个基本代码程序</div>
+      <div>正在持续运行...</div>
+      <br>
+      <div>或许现在还不是最佳时刻</div>
+      <div>当你在某个时刻想起了我</div>
+      <div>请再次打开！</div>
     </div>
 
   </div>
